--- a/src/components/Item/carrito.css
+++ b/src/components/Item/carrito.css
@@ -197,3 +197,11 @@ a.buy-btn{
   color: #fff;
 }
 }
+.btn-circle.btn-sm {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  font-size: 8px;
+  text-align: center;
+}
